# vnd-mcp-tui-driver

./: .gitignore  Cargo.toml  README.md  SECURITY.md
docs/plans/: 2026-01-01-debug-buffers-design.md  2026-01-01-mcp-tui-driver-design.md  2026-01-01-milestone-1-viewer.md  2026-01-01-milestone-2-keyboard.md  2026-01-01-milestone-3-snapshot.md  2026-01-01-milestone-4-clicker.md  2026-01-01-milestone-5-scripter.md  2026-01-01-milestone-6-production.md  2026-01-03-js-runtime-improvements-design.md  2026-01-03-wezterm-rmcp-implementation.md  2026-01-03-wezterm-rmcp-migration-design.md  2026-01-04-test-coverage-and-recording-design.md  2026-01-07-async-js-and-timeout-design.md
mcp-server/: Cargo.toml
mcp-server/src/: boa.rs  lib.rs  main.rs  server.rs  tools.rs
mcp-server/tests/: recording_test.rs  rmcp_test.rs  run_code_test.rs
tui-driver/: Cargo.toml
tui-driver/src/: driver.rs  error.rs  keys.rs  lib.rs  mouse.rs  recording.rs  snapshot.rs  terminal.rs
tui-driver/tests/: integration_test.rs
