[package]
name = "mcp-tui-driver"
version = "0.1.0"
edition = "2021"
description = "Playwright MCP for TUI apps - MCP server for headless TUI automation"
license = "MIT"
repository = "https://github.com/anthropics/mcp-tui-driver"
keywords = ["mcp", "tui", "terminal", "automation", "llm"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "mcp_tui_driver"
path = "src/lib.rs"

[[bin]]
name = "mcp-tui-driver"
path = "src/main.rs"

[dependencies]
tui-driver = { path = "../tui-driver" }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
boa_engine = "0.21"
boa_runtime = "0.21"
rmcp = { version = "0.12", features = ["server", "transport-io"] }
schemars = "1.2"
clap = { version = "4", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
anyhow = "1"
rmcp = { version = "0.12", features = ["client"] }
tempfile = "3"
