[package]
name = "tui-driver"
version = "0.1.0"
edition = "2021"
description = "Core library for TUI automation - PTY management and terminal emulation"
license = "MIT"
repository = "https://github.com/anthropics/mcp-tui-driver"
keywords = ["tui", "terminal", "pty", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
portable-pty = "0.8"
termwiz = { git = "https://github.com/wezterm/wezterm", tag = "20240203-110809-5046fc22" }
wezterm-term = { git = "https://github.com/wezterm/wezterm", tag = "20240203-110809-5046fc22" }
tokio = { version = "1", features = ["full", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
image = "0.25"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
